src/components/Footer.css
  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');

  .icon-div:hover, .details-div:hover{
      cursor: pointer;
      /* text-shadow: 2; */
  }
  a{
    color: white;
    text-decoration: none;
  }
  .footer-whole{
      height: 25vh;
      width: 100%;
      margin-top: 10vh;
      background-color: rgb(0, 171, 228);
      display: flex;
      flex-wrap: wrap;
  }
  .icon-div{
    height: 5vh;
    width: 13%;
    /* background-color: brown; */
  }
  .footer-mail, .footer-phone, .footer-web{
    height: 5vh;
    width: 10%;
    /* margin-left: 2%; */
    /* background-color: blueviolet; */
  }
  .footer-copy-div{
    height: 23vh;
    width: 500px;
    /* background-color: olive; */
    margin-left: 4%;
    margin-top: 2vh;    
      color: white;
      font-family: 'Montserrat', sans-serif;
      text-align: center;    
  }
  .links-div{
    /* background-color: blue;     */
      height: 17vh;
      width: 500px;
      margin-left: 15%;
      margin-top: 0vh;          
  }
  .details-div{
    height: 5vh;
    width: 80%;
    margin-left: -30%;
    /* background-color: chartreuse; */
    text-align: left;
  }

  @media only screen and (max-width: 920px){
      /* .footer-whole{
        height: 25vh;
        width: 100%;
        margin-top: 10vh;
      
      } */
      .links-div{
        height: 17vh;
        width: 50%;
        margin-left: 1%;
        margin-top: 0vh;
      }
  }
  @media (min-width: 920px){
    .links-div{
      height: 17vh;
      width: 50%;
      margin-left: 1%;
      margin-top: 0vh;
    }
  }

